tp-10/web-blue.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-blue
  template:
    metadata:
      name: web-blue
      labels:
        app: web-blue
    spec:
      containers:
      - name: web-blue
        image: kodekloud/webapp-color
        ports:
          - containerPort: 8080
