tp-10/service-blue.yml
apiVersion: v1
kind: Service
metadata:
  name: web-blue-svc
spec:
  type: ClusterIP
  ports:
    - targetPort: 8080
      port: 80
  selector:
    app: web-blue
