tp-10/service-red.yml
apiVersion: v1
kind: Service
metadata:
  name: web-red-svc
spec:
  type: ClusterIP
  ports:
    - targetPort: 8080
      port: 80
  selector:
    app: web-red
