tp-10/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-rule
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: www.orenjiiro.com
    http:
      paths:
      - path: /red
        backend:
          service:
            name: web-red-svc
            port:
              number: 8080
        pathType: Prefix
      - path: /blue
        backend:
          service:
            name: web-blue-svc
            port:
              number: 8080
        pathType: Prefix
